# Particulate

./: .gitignore  CMakeLists.txt
include/: emitter.hpp  globals.hpp  particle.hpp  renderer.hpp  simulation.hpp  simulation_acc.cuh  utils.hpp
src/: emitter.cpp  globals.cpp  main.cpp  particle.cpp  renderer.cpp  simulation.cpp  simulation_acc.cu
